# autotrade

./: .clang-format  .gitignore  CMakeLists.txt  README.md  autotrade.csproj  make.bat
data/: ASCT30O_20220801.txt  ASCT30S_20220801.txt  PSC_A100000261_20220831.pfx  Quotes.ini  Records.ini  Records.json  Settings.json  Stocks.ini  settings.ini  測試環境參考價_上市.txt
src/: ConfigHandler.cs  DataHandler.cs  EventHandler.cs  Program.cs  RayinAPI.cs  RayinVTSAPI.cs  Utility.cs
